<resources>
    <string name="app_name">药企圈</string>
    <string name="phone_number_input">请输入手机号</string>
    <string name="haveknow">取消</string>
    <string name="godelete">确定</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="company_name">企业名称</string>
    <string name="cms">康哲药业股份有限公司</string>
    <string name="meeting_title_label">会议标题</string>
    <string name="meeting_title_hint">请输入会议标题</string>
    <string name="please_select">请选择</string>
    <string name="meeting_date">会议日期</string>
    <string name="meeting_start_time">开始时间</string>
    <string name="meeting_end_time">结束时间</string>
    <string name="please_input_wathc_count_hint">请输入参会人数</string>
    <string name="meeting_count">参会人数</string>
    <string name="meeting_expenses">会议费用</string>
    <string name="please_input_meeting_expenses_hint">请输入会议费用</string>
    <string name="organization_password">组织密码</string>
    <string name="set_organization_password_hint">设置6位数字组织密码</string>
    <string name="guest_password">嘉宾密码</string>
    <string name="set_guest_password_hint">设置6位数字嘉宾密码</string>
    <string name="watch_password">参会密码</string>
    <string name="set_watch_password_hint">设置6位数字观看密码</string>
    <string name="publish_meeting">发布会议</string>
    <string name="edit">编辑</string>
    <string name="enter_meeting_room">进入会议室</string>
    <string name="meeting_time">会议时间</string>
    <string name="cancel_meeting">取消会议</string>
    <string name="copy">复制</string>
    <string name="know">知道了</string>
    <string name="add_link">加入链接</string>
    <string name="register_password_confirm_password_not_match">两次密码输入不一致</string>
    <string name="register_empty_error">密码不能为空</string>
    <string name="register_empty_length_error">请输入密码长度为6-18位字符</string>
    <string name="once_back_again" >"再按一次返回键退出应用"</string>
    <string name="select_address">选择地点</string>
    <string name="visit_group_yes">是</string>
    <string name="visit_group_no">否</string>
    <string name="link_serv"><u>联系客服</u></string>
    <string name="返回">返回</string>
    <string name="关闭">关闭</string>
</resources>
