<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        layout="@layout/layout_parent_titlebar_groupcompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/meeting_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/meeting_title_label"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <com.dachen.common.widget.ClearEditText
                    android:id="@+id/meeting_title"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/meeting_title_label"
                    android:hint="@string/meeting_title_hint"
                    android:maxLength="50"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <RelativeLayout
                android:id="@+id/select_date_layout"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/meeting_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/meeting_date"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:id="@+id/meeting_date"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/meeting_date_label"
                    android:hint="@string/please_select" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <RelativeLayout
                android:id="@+id/select_start_time_layout"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/meeting_start_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/meeting_start_time"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:id="@+id/meeting_start_time"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/meeting_start_time_label"
                    android:hint="@string/please_select" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <RelativeLayout
                android:id="@+id/select_end_time_layout"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/meeting_end_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/meeting_end_time"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:id="@+id/meeting_end_time"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/meeting_end_time_label"
                    android:hint="@string/please_select" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_right_arrow" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/meeting_count_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/meeting_count"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <com.dachen.common.widget.ClearEditText
                    android:id="@+id/meeting_count"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/meeting_count_label"
                    android:hint="@string/please_input_wathc_count_hint"
                    android:inputType="number"
                    android:maxLength="7"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/meeting_expenses_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/meeting_expenses"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <TextView
                    android:id="@+id/meeting_expenses_real"
                    style="@style/MeetingEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/meeting_expenses_label"
                    android:text="¥0元"
                    android:textColor="@color/orange_f07406"
                    tools:text="¥0元" />

                <TextView
                    android:id="@+id/meeting_expenses"
                    style="@style/MeetingEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/meeting_expenses_real"
                    android:textColor="@color/gray_888888"
                    tools:text="¥100元" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="手机端使用"
                android:textColor="@color/gray_888888"
                android:textSize="@dimen/text_size_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/watch_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/watch_password"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <com.dachen.common.widget.ClearEditText
                    android:id="@+id/watch_password"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/watch_password_label"
                    android:hint="@string/set_watch_password_hint"
                    android:inputType="number"
                    android:maxLength="6" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="PC端使用"
                android:textColor="@color/gray_888888"
                android:textSize="@dimen/text_size_16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />





            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/guest_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/guest_password"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <com.dachen.common.widget.ClearEditText
                    android:id="@+id/guest_password"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/guest_password_label"
                    android:hint="@string/set_guest_password_hint"
                    android:inputType="number"
                    android:maxLength="6" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/organization_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/organization_password"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/text_size_16sp" />

                <com.dachen.common.widget.ClearEditText
                    android:id="@+id/organization_password"
                    style="@style/MeetingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/organization_password_label"
                    android:hint="@string/set_organization_password_hint"
                    android:inputType="number"
                    android:maxLength="6" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:background="@color/color_grayline1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_white_button_bg"
                    android:text="@string/cancel_meeting"
                    android:textColor="@color/red_f95442"
                    android:textSize="@dimen/text_size_18sp"
                    android:visibility="gone" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/publish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_white_button_bg"
                    android:text="@string/publish_meeting"
                    android:textColor="@color/blue_3cbaff"
                    android:textSize="@dimen/text_size_18sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>